[project]
name = "yogurt"
version = "0.1.0"
description = "ðŸ¦ A fresh, type-safe, and modular AI framework for building powerful language applications in Python. ðŸ¦"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "tomli>=2.2.1",
]
